smartcard: add back smartcard support

This commit lands a rewrite of the smartcard plugin.  It makes use
of the DBus ObjectManager interface to export tokens over the bus,
as they're inserted and removed.

https://bugzilla.gnome.org/show_bug.cgi?id=704890